@@ -772,7 +772,7 @@ to take effect.
 set the image type: 
 \fBBilevel\fP, \fBGrayscale\fP, \fBPalette\fP,
 \fBPaletteMatte\fP, \fBTrueColor\fP, \fBTrueColorMatte\fP,
-\fBColorSeparation\fP, or \fBColorSeparationMatte\fP.
+\fBColorSeparation\fP, \fBColorSeparationMatte\fP, or \fBOptimize\fP.
 .TP
 .B -verbose
 print detailed information about the image.
