@@ -1316,7 +1316,7 @@ to take effect.</dd>
 the image type: 
 <b>Bilevel</b>, <b>Grayscale</b>, <b>Palette</b>,
 <b>PaletteMatte</b>, <b>TrueColor</b>, <b>TrueColorMatte</b>,
-<b>ColorSeparation</b>, or <b>ColorSeparationMatte</b>.
+<b>ColorSeparation</b>, <b>ColorSeparationMatte</b>, or <b>Optimize</b>.
 </dl>
 
 <table BORDER=0 WIDTH="65%" >
